<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:clipChildren="false"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
            app:cardElevation="1dp"
            app:cardCornerRadius="@dimen/small_radius"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <!-- common name -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/common_name"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_text"
                        android:textSize="18sp"
                        android:id="@+id/tv_common_name"
                        android:text="Test"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightest_light_grey"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"/>
                <!--/-->

                <!-- papiamento name -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/papiamento_name"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_text"
                        android:textSize="18sp"
                        android:id="@+id/tv_papiamento_name"
                        android:text="Test"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightest_light_grey"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"/>
                <!--/-->

                <!-- scientific name -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/scientific_name"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_text"
                        android:textSize="18sp"
                        android:textStyle="italic"
                        android:id="@+id/tv_scientific_name"
                        android:text="Test"/>
                </LinearLayout>
                <!--/-->

            </LinearLayout>
        </androidx.cardview.widget.CardView>

</LinearLayout>