<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipChildren="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/extra_light_grey"
            app:cardCornerRadius="20dp"
            app:cardElevation="1dp">

            <LinearLayout
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_species_list_image"
                        android:layout_width="@dimen/flora_species_thumbnail_width"
                        android:layout_height="@dimen/flora_species_thumbnail_height"
                        android:scaleType="fitXY"
                        android:src="@drawable/aff_logo_grey"
                        app:layout_constraintDimensionRatio="1:1" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:id="@+id/tv_species_list_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="Long text test"
                        android:textColor="@color/black"
                        android:textSize="@dimen/flora_species_list_title_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_species_list_sub_title"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="Long text test"
                        android:textSize="@dimen/flora_species_list_sub_title_text_size" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lightest_light_grey"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"/>

                    <TextView
                        android:id="@+id/tv_species_list_category"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="Category: "
                        android:textSize="@dimen/flora_species_list_small_text_size" />

                    <TextView
                        android:id="@+id/tv_species_list_falmily"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="Family: "
                        android:textSize="@dimen/flora_species_list_small_text_size" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end|bottom"
                        android:orientation="horizontal">

                        <!--Endemic badge-->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:id="@+id/ll_endemic_wrapper"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp">
                            <ImageView
                                android:layout_width="26dp"
                                android:layout_height="26dp"
                                android:scaleType="fitXY"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_aruba_badge" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textSize="8sp"
                                android:textStyle="bold"
                                android:textAllCaps="true"
                                android:text="@string/endemic_badge_text"/>
                        </LinearLayout>
                        <!--/-->

                        <!--Protected badge-->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:id="@+id/ll_protected_wrapper"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp">
                            <ImageView
                                android:layout_width="26dp"
                                android:layout_height="26dp"
                                android:scaleType="fitXY"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_protected_badge" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textSize="8sp"
                                android:textStyle="bold"
                                android:textAllCaps="true"
                                android:text="@string/protected_badge_text"/>
                        </LinearLayout>
                        <!--/-->

                        <!--Invasive badge-->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:id="@+id/ll_invasive_wrapper"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp">
                            <ImageView
                                android:layout_width="26dp"
                                android:layout_height="26dp"
                                android:scaleType="fitXY"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_invasive_badge" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textSize="8sp"
                                android:textStyle="bold"
                                android:textAllCaps="true"
                                android:text="@string/invasive_badge_text"/>
                        </LinearLayout>
                        <!--/-->

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

</RelativeLayout>